<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:flattr_sdk="http://schemas.flattr4android.com/sdk"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:gravity="center"
    android:textSize="20dp"
    android:textStyle="bold"
    android:text="@string/title"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    />
<TextView
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/button_xml"
    android:paddingBottom="10dp"
    />
    <LinearLayout
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content" 
    	android:gravity="center_horizontal"
    	android:paddingBottom="10dp">
		<com.flattr4android.sdk.FlattrButton
		    android:layout_width="wrap_content" 
    		android:layout_height="wrap_content" 
    		flattr_sdk:thing_id="115411"
    		flattr_sdk:button_style="vertical"
    	/>
	</LinearLayout>
<TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/button_prog"
    android:paddingBottom="10dp"
    />
    <LinearLayout
    	android:id="@+id/button_prog_layout"
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content" 
        android:gravity="center_horizontal"
        android:paddingBottom="10dp">
	</LinearLayout>
<TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/button_mini"
    android:paddingBottom="10dp"
    />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="10dp">
        <com.flattr4android.sdk.FlattrButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            flattr_sdk:thing_id="115411"
            flattr_sdk:button_style="mini"
        />
	</LinearLayout>
</LinearLayout>
